--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>LLM Chat App</title>
+		<title>Magic-IA</title>
 		<style>
 			:root {
 				--primary-color: #f6821f;
@@ -152,7 +152,7 @@
 			<div id="chat-messages" class="chat-messages">
 				<div class="message assistant-message">
 					<p>
-						Hello! I'm an LLM chat app powered by Cloudflare Workers AI. How can
+						Hello! I'm an LLM chat app powered by Kua. How can
 						I help you today?
 					</p>
 				</div>
