--- a/public/index.html
+++ b/public/index.html
@@ -144,8 +144,8 @@
 	</head>
 	<body>
 		<header>
-			<h1>Cloudflare AI Chat</h1>
-			<p>Powered by Cloudflare Workers AI</p>
+			<h1>Magic-IA</h1>
+			<p>Powered by Kua AI</p>
 		</header>
 
 		<div class="chat-container">
