--- a/public/index.html
+++ b/public/index.html
@@ -145,14 +145,14 @@
 	<body>
 		<header>
 			<h1>Magic-IA</h1>
-			<p>Powered by Kua AI</p>
+			<p>Version bêta</p>
 		</header>
 
 		<div class="chat-container">
 			<div id="chat-messages" class="chat-messages">
 				<div class="message assistant-message">
 					<p>
-						Hello! I'm an LLM chat app powered by Kua. How can
+						Hello! I'm an LLM chat app powered by Magic labs. How can
 						I help you today?
 					</p>
 				</div>
